# uniquiz-cross

./: .gitignore  Cargo.toml  build.sh
android-uniquiz/: Cargo.toml
android-uniquiz/app/: build.gradle
android-uniquiz/app/src/main/: AndroidManifest.xml
android-uniquiz/app/src/main/java/com/jedugsem/uniquiz/: MainActivity.java
android-uniquiz/app/src/main/res/mipmap-anydpi-v26/: quiz.xml
android-uniquiz/src/: lib.rs
parser/convert/: Cargo.toml
parser/convert/src/: main.rs
parser/jagdschein/: Cargo.toml  csol.sh
parser/jagdschein/data/binary/: bindata
parser/jagdschein/data/pdf/: FG_1_Prffragen_mL_Juli_2022.txt  FG_2_Prffragen_mL_Juli_2022.txt  FG_3_Prffragen_mL_Juli_2022.txt  FG_4_Prffragen_mL_Juli_2022.txt  FG_5_Prffragen_mL_Juli_2022.txt
parser/jagdschein/data/sol/: FG_1.txt  FG_2.txt  FG_3.txt  FG_4.txt  FG_5.txt
parser/jagdschein/data/text/: FG_1_Prffragen_mL_Juli_2022.txt  FG_2_Prffragen_mL_Juli_2022.txt  FG_3_Prffragen_mL_Juli_2022.txt  FG_4_Prffragen_mL_Juli_2022.txt  FG_5_Prffragen_mL_Juli_2022.txt
parser/jagdschein/src/: main.rs
quizlib/: Cargo.toml
quizlib/src/: lib.rs
uniquiz/: Cargo.toml  android_manifest
uniquiz/src/: back.rs  git.rs  lib.rs  main.rs  per.rs  settings.rs
uniquiz/src/comps/: card.rs  mod.rs
uniquiz/src/pages/: databases.rs  katselect.rs  mod.rs  progress.rs  search.rs  stepbystep.rs  test.rs
