[workspace]
members = ["uniquiz"]
default-members = ["uniquiz"]
resolver = "2"
exclude = ["android-uniquiz"]

[workspace.package]
version = "0.3.1"
authors = ["Jedug Sem"]
edition = "2021"
repository = "https://gitlab.com/jedugsem/uniquiz"
readme = "README.md"

[workspace.dependencies]
quizlib = { git = "https://github.com/jedugsem/quizlib" }
iced-material = { git = "https://github.com/jedugsem/iced-material" }

