[package]
name = "jagdschein_pars"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "jagdschein_pars"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false


[dependencies]
substring = "*"
quizlib = {workspace=true}
bincode = "*"
dirs = "*"
